[gd_scene load_steps=16 format=3 uid="uid://3vqqpsbsh0fj"]

[ext_resource type="Script" path="res://entity/player/player.gd" id="1_et6ug"]
[ext_resource type="Texture2D" uid="uid://dcvl21mruh20q" path="res://atlas.png" id="2_0pfg2"]
[ext_resource type="Script" path="res://levels/level.gd" id="2_aqxtm"]
[ext_resource type="Resource" uid="uid://dt7fsp5k3c582" path="res://levels/1.tres" id="3_61v3r"]
[ext_resource type="PackedScene" uid="uid://dexs5x4qj4hh1" path="res://entity/parts/healthbar/healthbar.tscn" id="3_rypnf"]
[ext_resource type="Resource" uid="uid://pa668p78s4ly" path="res://levels/3.tres" id="4_c28du"]
[ext_resource type="Resource" uid="uid://cby2pbjx0oc7i" path="res://levels/4.tres" id="5_hppw8"]
[ext_resource type="Resource" uid="uid://csqqtk4rykqak" path="res://levels/5.tres" id="6_vsfn4"]
[ext_resource type="Resource" uid="uid://cd2iny3p0hfup" path="res://levels/6.tres" id="7_bitfa"]
[ext_resource type="Resource" uid="uid://b75iy80jh0wp8" path="res://levels/7.tres" id="8_s7vlc"]
[ext_resource type="Resource" uid="uid://cdhpo81f80m38" path="res://levels/8.tres" id="9_b71rb"]
[ext_resource type="AudioStream" uid="uid://i7vv37vdh7s5" path="res://death.wav" id="11_6f6wr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aivp2"]
radius = 21.3776

[sub_resource type="AtlasTexture" id="AtlasTexture_ee1ho"]
atlas = ExtResource("2_0pfg2")
region = Rect2(0.802658, 1.38461, 67.7072, 43.0323)

[sub_resource type="Curve2D" id="Curve2D_ostrv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -914.927, 2, 0, 0, 0, 0, -903.915, -574, 0, 0, 0, 0, -34, -583, 0, 0, 0, 0, 915.99, -572, 0, 0, 0, 0, 926, 1, 0, 0, 0, 0, 912.987, 637, 0, 0, 0, 0, 2, 648, 0, 0, 0, 0, -885.897, 623, 0, 0, 0, 0, -902.914, 305, 0, 0, 0, 0, -914.927, 2)
}
point_count = 10

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health_bar")]
script = ExtResource("1_et6ug")
health_bar = NodePath("Healthbar")
levels = Array[ExtResource("2_aqxtm")]([ExtResource("3_61v3r"), ExtResource("4_c28du"), ExtResource("5_hppw8"), ExtResource("6_vsfn4"), ExtResource("7_bitfa"), ExtResource("8_s7vlc"), ExtResource("9_b71rb")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aivp2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, 9.53674e-07)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_ee1ho")

[node name="Healthbar" parent="." instance=ExtResource("3_rypnf")]
offset_left = -15.0
offset_top = -35.0
offset_right = 15.0
offset_bottom = -31.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(34.9691, -7)
scale = Vector2(0.998953, 1)
curve = SubResource("Curve2D_ostrv")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-914.927, 2)
rotation = -1.55168

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_6f6wr")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
